// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`costItemsReducer should matches the add cost item state 1`] = `
Object {
  "costItems": Array [
    Object {
      "category": "CLOTHING",
      "comment": "this is a comment",
      "cost": 1000,
    },
  ],
}
`;

exports[`costItemsReducer should matches the add filtered cost items state 1`] = `
Object {
  "costItems": Array [
    Object {
      "category": "CLOTHING",
      "comment": "this is a comment",
      "cost": 1000,
    },
    Object {
      "category": "RENT",
      "comment": "this is a comment",
      "cost": 1500,
    },
    Object {
      "category": "FOOD",
      "comment": "this is a comment",
      "cost": 2000,
    },
  ],
}
`;

exports[`costItemsReducer should matches the initial state 1`] = `
Object {
  "costItems": Array [],
}
`;
